# LaczTabeleNietoperzy

./: .gitignore  README.md  Readme.txt  Sla_ihop_exceL_fladdermus_tabell.py  Sla_ihop_exceL_fladdermus_tabell_och_skapa_diagram.py  Sla_ihop_exceL_fladdermus_tabell_och_skapa_diagram_natt.py  run_algorithms.bat  run_algorithms.sh  start.py
SampleData/: Mittlagan_Box1-2.xlsx  Varsvik_HalmstadBox4.xlsx
SampleData/Results/: sammanstallning_fladdermus_ART.xlsx  sammanstallning_fladdermus_NVI.xlsx
algorithms/: merge_summary_and_nightly_charts.py  merge_summary_charts.py
parallel-graph/: .gitignore  README.md  parallel.bat  parallel.py  parallel.sh  pyproject.toml  requirements.txt
parallel-graph/src/parallel_graph/: __init__.py  aggregation.py  app.py  chart.py  excel_reader.py  export.py  models.py  translations.py
