[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-bat-graph"
version = "1.0.0"
description = "Interactive minute-resolution comparison of bat registrations from multiple Excel sources"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1,<4",
  "plotly>=5.20,<7",
]

[project.scripts]
parallel-bat-graph = "parallel_graph.app:main"

[tool.setuptools.packages.find]
where = ["src"]

